.provarCaches/00D5f000005vwGkEAI/objects/rstkf__ap1099year__c.object
<CustomObject>
    <description>ap1099year__c</description>
    <fields>
        <fullName>rstkf__ap1099year_city__c</fullName>
        <inlineHelpText>Information from associated Financial Company (for use on Form 1096 etc.)</inlineHelpText>
        <label>Company City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__ap1099year_contact__c</fullName>
        <inlineHelpText>Information from associated Financial Company (for use on Form 1096 etc.)</inlineHelpText>
        <label>Company Contact</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__ap1099year_country__c</fullName>
        <inlineHelpText>Information from associated Financial Company (for use on Form 1096 etc.)</inlineHelpText>
        <label>Company Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__ap1099year_ein__c</fullName>
        <inlineHelpText>Information from associated Financial Company (for use on Form 1096 etc.)</inlineHelpText>
        <label>Tax Identification Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__ap1099year_email__c</fullName>
        <inlineHelpText>Information from associated Financial Company (for use on Form 1096 etc.)</inlineHelpText>
        <label>Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>rstkf__ap1099year_fax__c</fullName>
        <inlineHelpText>Information from associated Financial Company (for use on Form 1096 etc.)</inlineHelpText>
        <label>Contact Fax</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__ap1099year_glcmp__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>The Financial Company associated with this AP 1099 Tax Year.</inlineHelpText>
        <label>Company Number</label>
        <referenceTo>rstkf__glcmp__c</referenceTo>
        <relationshipLabel>AP 1099 Tax Year</relationshipLabel>
        <relationshipName>ap1099years</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__ap1099year_name__c</fullName>
        <inlineHelpText>Information from associated Financial Company (for use on Form 1096 etc.)</inlineHelpText>
        <label>Company Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__ap1099year_phone__c</fullName>
        <inlineHelpText>Information from associated Financial Company (for use on Form 1096 etc.)</inlineHelpText>
        <label>Contact Phone</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__ap1099year_state__c</fullName>
        <inlineHelpText>Information from associated Financial Company (for use on Form 1096 etc.)</inlineHelpText>
        <label>Company State</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__ap1099year_street__c</fullName>
        <inlineHelpText>Information from associated Financial Company (for use on Form 1096 etc.)</inlineHelpText>
        <label>Company Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstkf__ap1099year_totbox10__c</fullName>
        <description>Total of Box 10</description>
        <inlineHelpText>The total amount of Box 10 from all 1099 details under this Form Year</inlineHelpText>
        <label>Total of Box 10</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__ap1099year_totbox11__c</fullName>
        <inlineHelpText>The total amount of Box 11 from all 1099 details under this Form Year</inlineHelpText>
        <label>Total of Box 11</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__ap1099year_totbox1__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>The total amount of Box 1 from all 1099 details under this Form Year</inlineHelpText>
        <label>Total Rents</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__ap1099year_totforms__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>The total number of AP1099 details created in this Form Year</inlineHelpText>
        <label>Number of Forms</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__ap1099year_year__c</fullName>
        <inlineHelpText>AP 1099 Tax Year</inlineHelpText>
        <label>Issued for Tax Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__ap1099year_zip__c</fullName>
        <inlineHelpText>Information from associated Financial Company (for use on Form 1096 etc.)</inlineHelpText>
        <label>Company Zip Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__externalid__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__formula_extid__c</fullName>
        <formula>rstkf__ap1099year_glcmp__r.rstkf__externalid__c + &apos;-&apos; + Text(rstkf__ap1099year_year__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__formula_name__c</fullName>
        <formula>rstkf__ap1099year_glcmp__r.rstkf__glcmp_cmpno__r.rstk__sycmp_cmpno__c + &apos;-&apos; + Text(rstkf__ap1099year_year__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <label>AP 1099 Tax Year</label>
    <listViews>
        <fullName>rstkf__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>AP 1099 Tax Year Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AP 1099 Tax Year</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>